8-ingress/gce-ingress-external.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-ingress
  namespace: moodle
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    # kubernetes.io/ingress.class: "gce"
    spec.ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: "moodle-ingress-ip"
    networking.gke.io/managed-certificates: "moodle-google-managed-certificate"
    networking.gke.io/v1beta1.FrontendConfig: "moodle-ingress-frontendconfig-https"
spec:
  rules:
  - host: grasiomoodle.my.id
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: moodle
            port:
              number: 80
